fix top button overlap

--- a/app/assets/stylesheets/pages/innovation_playlist.scss
+++ b/app/assets/stylesheets/pages/innovation_playlist.scss
@@ -41,6 +41,7 @@ body {
 .playlist-chapter-header {
   padding: 30px;
   p {
+    width: 65%;
     font-family: "Montserrat Light", montserrat, sans-serif;
     color: #d2d2d2;
     margin-bottom: 20px;
